--- a/dapi/public/pc.html
+++ b/dapi/public/pc.html
@@ -187,7 +187,7 @@
 		<script>
 			$(document).ready(function(){
 				mr.initialize({
-					api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
+					api: 'http://192.168.1.25/api/v1',
 					// api: '../api/v1',
 					el:  'mr-canvas'
 				});
