--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -162,7 +162,7 @@
 		<script>
 			$(document).ready(function(){
     		mr.initialize({
-    			api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
+    			api: 'http://192.168.1.25:3000/api/v1',
     			el:   'mr-canvas',
     			face: 'TO'         // 20120605 force FACE API parameter
 				});
