--- a/dapi/public/js/mr/test/index.html
+++ b/dapi/public/js/mr/test/index.html
@@ -35,6 +35,10 @@
 		<script src="../model/v1/Page.js"></script>
 		<script src="../model/v1/Question.js"></script>
 		<script src="../model/v1/Questions.js"></script>
+		<script src="../model/Parameter.js"></script>
+		<script src="../model/CountDown.js"></script>
+		<script src="../model/Next.js"></script>
+		<script src="../model/Content.js"></script>
 		<script src="../model/Campaign.js"></script>
 		<script src="../model/Page.js"></script>
 		<script src="../model/Question.js"></script>
@@ -44,25 +48,32 @@
 		<script src="../controller/MobileController.js"></script>
 		
 		<script src="../ui/Base.js"></script>
+		<script src="../ui/Creative.js"></script>
 		<script src="../ui/Player.js"></script>
 		<script src="../ui/Nav.js"></script>
 		<script src="../ui/Ad.js"></script>
 		<script src="../ui/Landing.js"></script>
-		<script src="../ui/CountDown.js"></script>
+		<script src="../ui/Next.js"></script>
 		<script src="../ui/Question.js"></script>
+		<script src="../ui/Questions.js"></script>
+		<script src="../ui/Already.js"></script>
 		<script src="../ui/Page.js"></script>
+		<script src="../ui/Complete.js"></script>
+		<script src="../ui/Thankyou.js"></script>
 		<script src="../ui/Content.js"></script>
 		<script src="../ui/Body.js"></script>
 		<script src="../ui/Footer.js"></script>
 		<script src="../ui/Header.js"></script>
+		<script src="../ui/Theme.js"></script>
 		<script src="../ui/Canvas.js"></script>
 		
 		<script src="mr.test.js"></script>
-		<script src="mr.model.test.js"></script>
-		<script src="mr.ui.test.js"></script>
+		<!-- <script src="mr.model.test.js"></script> -->
+		<script src="mr.ui.test.js?v=20120613"></script>
 	</head>
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 	</body>
 </html>
+
