--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -185,7 +185,7 @@
 			$(document).ready(function(){
     		mr.initialize({
     			// api: '../api/v1',
-					// api: 'http://192.168.1.115/nci-201205/api/v1',
+					// api: 'http://moviereward.nadai.jp/api/v1',
 					api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
     			el:   'mr-canvas',
     			face: 'SP'         // 20120605 force FACE API parameter
