--- a/dapi/public/pc.html
+++ b/dapi/public/pc.html
@@ -190,7 +190,7 @@
 				mr.initialize({
 					// api: '../api/v1',
 					api: 'http://moviereward.nadai.jp:3000/api/v1',
-					api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
+					//api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
 					el:  'mr-canvas'
 				});
   		});
