--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -186,7 +186,7 @@
     		mr.initialize({
     			// api: '../api/v1',
 					api: 'http://moviereward.nadai.jp:3000/api/v1',
-					api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
+					//api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',
     			el:   'mr-canvas',
     			face: 'SP'         // 20120605 force FACE API parameter
 				});
