--- a/dapi/public/js/mr/test/api.test.html
+++ b/dapi/public/js/mr/test/api.test.html
@@ -73,16 +73,18 @@
 				 * 
 				 */
 			  asyncTest('Answer test"', function() {
-			  	var _url  = 'http://moviereward.nadai.jp:3001/api/v1/enqs/EnqStatus1/pages/EnqPCSuccessConfirmPage1/campaigns/CampaignSuccessConfirm/answers';
+			  	// var _url  = 'http://moviereward.nadai.jp:3001/api/v1/enqs/EnqStatus1/pages/EnqPCSuccessConfirmPage1/campaigns/CampaignSuccessConfirm/answers';
+			  	var _url  = 'http://nci-201205.sunbinet.local/nci-201205/api/v1/enqs/1/pages/1/campaigns/1/answers';
 			  	var _data = {
 			  		"session_id": "3175f6d7-a020-7ad0-cc3e-3372ea140f02",
 			  		"uid":        "1",
 			  		"key":        "mixi_uid",
-			  		"answer_1":   "男性",
-			  		"answer_2":   "32",
+			  		"answer_1[]":  ["男性", "助成"],
+			  		"answer_2":   ["32"],
 			  	};
+			  	console.log(JSON.stringify(_data));
 			  	$.ajax({
-						type:  "POST",
+						type:  "GET",
 						url:   _url,
 						data:  _data,
 						beforeSend: function(xhr, settings) {
