--- a/dapi/public/js/mr/test/mr.ui.Ad.html
+++ b/dapi/public/js/mr/test/mr.ui.Ad.html
@@ -9,13 +9,18 @@
 		<link rel="stylesheet" href="qunit/qunit.css">
 		<script src="qunit/qunit.js"></script>
 		
+	</head>
+	<body>
+		<div id="qunit"></div>
+		<div id="qunit-fixture"></div>
+		
 		<!-- User agent detection -->
 		<script src="../../ua.js"></script>
 		
 		<!-- jQuery, Backbone, underscore -->
 		<script>
 			(function(){
-				(ua.OS === "iPhone/iPod") ?
+				(ua.OS === "iPhone/iPod" || ua.OS === "Android") ?
 					document.write('<script src="../../libs/zepto-1.0-rc1.min.js"><\/script>') :
 			 		document.write('<script src="../../libs/jquery-1.7.2.min.js"><\/script>');
 			})();
@@ -24,55 +29,70 @@
 		<script src="../../libs/backbone-0.9.2.js"></script>
 		
 		<!-- Video.js for mr.ui.VideoPlayer --> 
-		<script src="../../libs/video-js/video.js"></script>
+		<!-- <script src="js/libs/video-js/video.js"></script> -->
+		<script src="../../libs/mediaelement/mediaelement-and-player.min.js"></script>
+		
+		<!-- cript lib -->
+		<script src="../../libs/sjcl.js"></script>
+		
+		<!-- URI.js -->
+		<script src="../../libs/URI.js"></script>
 		
 		<!-- MovieReward Scripts -->
-		<script src="../../mr.js?v=1"></script>
+		<script src="../../mr.js?v=20120620"></script>
 		
-		<script src="../model/Base.js"></script>
-		<script src="../model/v1/Base.js"></script>
-		<script src="../model/v1/Campaign.js"></script>
-		<script src="../model/v1/Page.js"></script>
-		<script src="../model/v1/Question.js"></script>
-		<script src="../model/v1/Questions.js"></script>
-		<script src="../model/Parameter.js"></script>
-		<script src="../model/CountDown.js"></script>
-		<script src="../model/Next.js"></script>
-		<script src="../model/Content.js"></script>
-		<script src="../model/Campaign.js"></script>
-		<script src="../model/Page.js"></script>
-		<script src="../model/Question.js"></script>
-		<script src="../model/Questions.js"></script>
-		
-		<script src="../controller/Controller.js"></script>
-		<script src="../controller/MobileController.js"></script>
-		
-		<script src="../ui/Base.js"></script>
-		<script src="../ui/Creative.js"></script>
-		<script src="../ui/Player.js"></script>
-		<script src="../ui/Nav.js"></script>
-		<script src="../ui/Ad.js"></script>
-		<script src="../ui/Landing.js"></script>
-		<script src="../ui/Next.js"></script>
-		<script src="../ui/Question.js"></script>
-		<script src="../ui/Questions.js"></script>
-		<script src="../ui/Already.js"></script>
-		<script src="../ui/Page.js"></script>
-		<script src="../ui/Complete.js"></script>
-		<script src="../ui/Thankyou.js"></script>
-		<script src="../ui/Content.js"></script>
-		<script src="../ui/Body.js"></script>
-		<script src="../ui/Footer.js"></script>
-		<script src="../ui/Header.js"></script>
-		<script src="../ui/Theme.js"></script>
-		<script src="../ui/Canvas.js"></script>
+		<script src="../model/Base.js?v=20120620"></script>
+		<script src="../model/v1/Base.js?v=20120620"></script>
+		<script src="../model/v1/Campaign.js?v=20120620"></script>
+		<script src="../model/v1/Page.js?v=20120620"></script>
+		<script src="../model/v1/Question.js?v=20120620"></script>
+		<script src="../model/v1/Questions.js?v=20120620"></script>
+		<script src="../model/v1/Answer.js?v=20120620"></script>
+		<script src="../model/Parameter.js?v=20120620"></script>
+		<!-- <script src="../model/CountDown.js?v=20120620"></script>
+		<script src="../model/Next.js?v=20120620"></script>
+		<script src="../model/Content.js?v=20120614"></script> -->
+		<script src="../model/Campaign.js?v=20120620"></script>
+		<script src="../model/Page.js?v=20120620"></script>
+		<script src="../model/Question.js?v=20120620"></script>
+		<script src="../model/Questions.js?v=20120620"></script>
+		<script src="../model/Answer.js?v=20120620"></script>
+				
+		<script src="../ui/Base.js?v=20120620"></script>
+		<script src="../ui/Creative.js?v=20120620"></script>
+		<script src="../ui/PlayerME.js?v=20120620"></script>
+		<script src="../ui/model/Nav.js?v=20120620"></script>
+		<script src="../ui/Nav.js?v=20120620"></script>
+		<script src="../ui/model/Ad.js?v=20120620"></script>
+		<script src="../ui/Ad.js?v=20120620"></script>
+		<script src="../ui/model/Landing.js?v=20120620"></script>
+		<script src="../ui/Landing.js?v=20120620"></script>
+		<script src="../ui/model/Next.js?v=20120620"></script>
+		<script src="../ui/Next.js?v=20120620"></script>
+		<script src="../ui/Question.js?v=20120620"></script>
+		<script src="../ui/Questions.js?v=20120620"></script>
+		<script src="../ui/Already.js?v=20120620"></script>
+		<script src="../ui/Page.js?v=20120614"></script>
+		<script src="../ui/model/Complete.js?v=20120620"></script>
+		<script src="../ui/Complete.js?v=20120620"></script>
+		<script src="../ui/model/Thankyou.js?v=20120620"></script>
+		<script src="../ui/Thankyou.js?v=20120620"></script>
+		<script src="../ui/model/Sorry.js?v=20120620"></script>
+		<script src="../ui/Sorry.js?v=20120620"></script>
+		<script src="../ui/model/Content.js?v=20120620"></script>
+		<script src="../ui/Content.js?v=20120614"></script>
+		<script src="../ui/Body.js?v=20120620"></script>
+		<script src="../ui/Footer.js?v=20120620"></script>
+		<script src="../ui/Header.js?v=20120620"></script>
+		<script src="../ui/model/Theme.js?v=20120620"></script>
+		<script src="../ui/Theme.js?v=20120620"></script>
+		<script src="../ui/Conversion.js?v=20120620"></script>
+		<script src="../ui/Canvas.js?v=20120620"></script>
+
+		<script src="../controller/Controller.js?v=20120620"></script>
 		
 		<!-- Test Script -->
 		<script src="mr.ui.Ad.test.js"></script>
-	</head>
-	<body>
-		<div id="qunit"></div>
-		<div id="qunit-fixture"></div>
 	</body>
 </html>
 
