--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -19,7 +19,7 @@
 	</head>
 
 	<body id="mr-canvas" class="mr-ui-canvas">
-
+		
 		<div id="top" class="mr-ui-header">
 			<img src="" width="100%" >
 		</div>
@@ -27,7 +27,7 @@
 		<div class="mr-ui-body">
 			
 			<div class="mr-ui-ad">
-				<video class="mr-ui-player" width="265" height="154" preload="auto"></video>
+				<video class="mr-ui-player" width="265" height="154" controls="controls"></video>
 				<div class="mr-ui-creative mr-ui-template">{{creative}}</div>
 			</div>
             
@@ -153,6 +153,8 @@
 		<script src="js/libs/underscore-1.3.3.js"></script>
 		<script src="js/libs/backbone-0.9.2.js"></script>
 		
+		<script src="js/libs/swfobject.js"></script>
+		
 		<!-- Video.js for mr.ui.VideoPlayer --> 
 		<!-- <script src="js/libs/video-js/video.min.js"></script> -->
 		<script src="js/libs/mediaelement/mediaelement-and-player.min.js"></script>
@@ -174,9 +176,6 @@
 		<script src="js/mr/model/v1/Questions.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Answer.js?v=20120620"></script>
 		<script src="js/mr/model/Parameter.js?v=20120620"></script>
-		<script src="js/mr/model/CountDown.js?v=20120620"></script>
-		<script src="js/mr/model/Next.js?v=20120620"></script>
-		<script src="js/mr/model/Content.js?v=20120614"></script>
 		<script src="js/mr/model/Campaign.js?v=20120620"></script>
 		<script src="js/mr/model/Page.js?v=20120620"></script>
 		<script src="js/mr/model/Question.js?v=20120620"></script>
@@ -185,7 +184,7 @@
 				
 		<script src="js/mr/ui/Base.js?v=20120620"></script>
 		<script src="js/mr/ui/Creative.js?v=20120620"></script>
-		<script src="js/mr/ui/PlayerME.js?v=20120620"></script>
+		<script src="js/mr/ui/PlayerME.js?v=201206202131"></script>
 		<script src="js/mr/ui/model/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Ad.js?v=20120620"></script>
@@ -194,10 +193,10 @@
 		<script src="js/mr/ui/Landing.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Next.js?v=20120620"></script>
 		<script src="js/mr/ui/Next.js?v=20120620"></script>
-		<script src="js/mr/ui/Question.js?v=20120620"></script>
+		<script src="js/mr/ui/Question.js?v=201206210830"></script>
 		<script src="js/mr/ui/Questions.js?v=20120620"></script>
 		<script src="js/mr/ui/Already.js?v=20120620"></script>
-		<script src="js/mr/ui/Page.js?v=20120614"></script>
+		<script src="js/mr/ui/Page.js?v=201206210840"></script>
 		<script src="js/mr/ui/model/Complete.js?v=20120620"></script>
 		<script src="js/mr/ui/Complete.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Thankyou.js?v=20120620"></script>
@@ -215,7 +214,7 @@
 		<script src="js/mr/ui/Canvas.js?v=20120620"></script>
 
 		
-		<script src="js/mr/controller/Controller.js?v=20120620"></script>
+		<script src="js/mr/controller/Controller.js?v=201206210050"></script>
 		<script src="js/mr/controller/MobileController.js"></script>
 		
 		<script>
@@ -224,10 +223,10 @@
     			// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
 					// api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
-					api: 'http://moviereward.nadai.jp:3001/api/v1',              // dev
+					api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
-    			el:   'mr-canvas',
-    			face: 'SP'         // 20120605 force FACE API parameter
+    			el:       'mr-canvas',
+    			terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
 				});
   		});
 		</script>
