--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -214,7 +214,7 @@
 		<script src="js/mr/ui/Canvas.js?v=20120620"></script>
 
 		
-		<script src="js/mr/controller/Controller.js?v=201206210050"></script>
+		<script src="js/mr/controller/Controller.js?v=201206211010"></script>
 		<script src="js/mr/controller/MobileController.js"></script>
 		
 		<script>
@@ -223,8 +223,9 @@
     			// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
 					// api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
-					api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
+					// api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
+					api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
     			el:       'mr-canvas',
     			terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
 				});
