--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -184,7 +184,7 @@
 				
 		<script src="js/mr/ui/Base.js?v=20120620"></script>
 		<script src="js/mr/ui/Creative.js?v=20120620"></script>
-		<script src="js/mr/ui/PlayerME.js?v=201206202131"></script>
+		<script src="js/mr/ui/PlayerME.js?v=201206211108"></script>
 		<script src="js/mr/ui/model/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Ad.js?v=20120620"></script>
@@ -209,7 +209,7 @@
 		<script src="js/mr/ui/Footer.js?v=20120620"></script>
 		<script src="js/mr/ui/Header.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Theme.js?v=20120620"></script>
-		<script src="js/mr/ui/Theme.js?v=20120620"></script>
+		<script src="js/mr/ui/Theme.js?v=201206211045"></script>
 		<script src="js/mr/ui/Conversion.js?v=20120620"></script>
 		<script src="js/mr/ui/Canvas.js?v=20120620"></script>
 
@@ -222,10 +222,10 @@
     		mr.initialize({
     			// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
-					// api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
+					api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
 					// api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
-					api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
+					// api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
     			el:       'mr-canvas',
     			terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
 				});
