--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -222,10 +222,10 @@
     		mr.initialize({
     			// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
-					api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
+					//api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
 					// api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
-					// api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
+					 api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
     			el:       'mr-canvas',
     			terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
 				});
