--- a/dapi/public/index.html
+++ b/dapi/public/index.html
@@ -4,7 +4,7 @@
 	  <meta charset="utf-8">
 	</head>
 	<body>
-		
+		お待ちください...
 		<!-- load scripts  -->
 		<!-- User agent detection -->
 		<script src="js/ua.js"></script>
