--- a/dapi/public/js/mr/test/api.test.html
+++ b/dapi/public/js/mr/test/api.test.html
@@ -22,7 +22,7 @@
 						type:  "GET",
 						url:   _url,
 						data:  {
-							face:  'SP'
+							terminal:  'iPhone'
 						},
 						beforeSend: function(xhr, settings) { 
 							xhr.setRequestHeader("X-Requested-By","poncan-moviereward");
@@ -49,7 +49,7 @@
 						type:  "GET",
 						url:   _url,
 						data:  {
-							face:  'SP'
+							terminal:  'iPhone'
 						},
 						beforeSend: function(xhr, settings) {
 							/* 
@@ -81,7 +81,6 @@
 			  		"key":        "mixi_uid",
 			  		"answer_1[]":  ["男性"],
 			  	};
-			  	console.log(JSON.stringify(_data));
 			  	$.ajax({
 						type:  "POST",
 						url:   _url,
