--- a/dapi/public/pc.html
+++ b/dapi/public/pc.html
@@ -100,10 +100,12 @@
 							<b class="clear-type">{{title}}</b>
 						</div>
 						<div class="mr-ui-message">
-							{{message}}
+							{{social}}
 						</div>
 						<div class="mr-ui-client">
-							<a href="{{client_url}}" >{{go_to_client_url}}</a>
+							<button type="button" class="mr-ui-next mr-ui-button clear-type">
+								<a target="_blank" href="{{client_url}}">クライアントサイトへ移動する</a>
+							</button>
 						</div>
 					</div>
 					
@@ -153,15 +155,11 @@
 		<script src="js/ua.js"></script>
 		
 		<!-- jQuery, Backbone, underscore -->
-		<script>
-			(function(){
-				(ua.OS === "iPhone/iPod" || ua.OS === "Android") ?
-					document.write('<script src="js/libs/zepto-1.0-rc1.min.js"><\/script>') :
-			 		document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>');
-			})();
-		</script>
+		<script src="js/libs/jquery-1.7.2.min.js"></script>
 		<script src="js/libs/underscore-1.3.3.js"></script>
 		<script src="js/libs/backbone-0.9.2.js"></script>
+		
+		<script src="js/libs/swfobject.js"></script>
 		
 		<!-- Video.js for mr.ui.VideoPlayer --> 
 		<!-- <script src="js/libs/video-js/video.js"></script> -->
@@ -174,11 +172,11 @@
 		<script src="js/libs/URI.js"></script>
 		
 		<!-- MovieReward Scripts -->
-		<script src="js/mr.js?v=20120620"></script>
+		<script src="js/mr.js?v=201206212305"></script>
 		
 		<script src="js/mr/model/Base.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Base.js?v=20120620"></script>
-		<script src="js/mr/model/v1/Campaign.js?v=20120620"></script>
+		<script src="js/mr/model/v1/Campaign.js?v=201206220847"></script>
 		<script src="js/mr/model/v1/Page.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Question.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Questions.js?v=20120620"></script>
@@ -203,6 +201,7 @@
 		<script src="js/mr/ui/Next.js?v=20120620"></script>
 		<script src="js/mr/ui/Question.js?v=20120620"></script>
 		<script src="js/mr/ui/Questions.js?v=20120620"></script>
+		<script src="js/mr/ui/model/Already.js?v=20120621"></script>
 		<script src="js/mr/ui/Already.js?v=20120620"></script>
 		<script src="js/mr/ui/Page.js?v=20120614"></script>
 		<script src="js/mr/ui/model/Complete.js?v=20120620"></script>
@@ -229,8 +228,9 @@
 					// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
 					// api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
-					api: 'http://moviereward.nadai.jp:3002/api/v1',              // dev
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
+					// api: 'http://moviereward.nadai.jp:3001/api/v1',              // STABLE
+					api: 'http://moviereward.nadai.jp:3002/api/v1',              // dev
 					el:  'mr-canvas'
 				});
   		});
