--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/sp/base.css">
 		<!-- <link rel="stylesheet" href="js/libs/video-js/video-js.min.css" > -->
 		<link rel="stylesheet" href="js/libs/mediaelement/mediaelementplayer.min.css" />
-		<link rel="stylesheet" href="css/sp/style.css">
+		<link rel="stylesheet" href="css/sp/style.css?v=201206212345">
 		
 	  <script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 	</head>
@@ -27,7 +27,7 @@
 		<div class="mr-ui-body">
 			
 			<div class="mr-ui-ad">
-				<video class="mr-ui-player" width="265" height="154" controls="controls"></video>
+				<video class="mr-ui-player" width="265" height="154"></video>
 				<div class="mr-ui-creative mr-ui-template">{{creative}}</div>
 			</div>
             
@@ -104,10 +104,14 @@
 							<b class="clear-type">{{title}}</b>
 						</div>
 						<div class="mr-ui-message">
-							{{message}}
+							{{social}}
 						</div>
 						<div class="mr-ui-client">
-							<a href="{{client_url}}" >{{go_to_client_url}}</a>
+							<button type="button" class="mr-ui-next mr-ui-button clear-type" >
+								<a target="_blank" href="{{client_url}}">
+									クライアントサイトへ移動する
+								</a>
+							</button>
 						</div>
 					</div>
 					
@@ -166,7 +170,7 @@
 		<script src="js/libs/URI.js"></script>
 		
 		<!-- MovieReward Scripts -->
-		<script src="js/mr.js?v=20120620"></script>
+		<script src="js/mr.js?v=201206212305"></script>
 		
 		<script src="js/mr/model/Base.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Base.js?v=20120620"></script>
@@ -195,6 +199,7 @@
 		<script src="js/mr/ui/Next.js?v=20120620"></script>
 		<script src="js/mr/ui/Question.js?v=201206210830"></script>
 		<script src="js/mr/ui/Questions.js?v=20120620"></script>
+		<script src="js/mr/ui/model/Already.js?v=20120621"></script>
 		<script src="js/mr/ui/Already.js?v=20120620"></script>
 		<script src="js/mr/ui/Page.js?v=201206210840"></script>
 		<script src="js/mr/ui/model/Complete.js?v=20120620"></script>
@@ -222,10 +227,10 @@
     		mr.initialize({
     			// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
-					//api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
-					// api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
+					// api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
-					 api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
+					// api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
+					api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
     			el:       'mr-canvas',
     			terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
 				});
