--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="css/sp/base.css">
 		<!-- <link rel="stylesheet" href="js/libs/video-js/video-js.min.css" > -->
 		<link rel="stylesheet" href="js/libs/mediaelement/mediaelementplayer.min.css" />
-		<link rel="stylesheet" href="css/sp/style.css?v=201206212345">
+		<link rel="stylesheet" href="css/sp/style.css?v=201206221657">
 		
 	  <script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 	</head>
@@ -35,6 +35,10 @@
 				<p class="clear-type">{{html}}</p>
 			</div>
 
+			<!-- for conversion -->
+			<div class="mr-ui-conversion mr-ui-template">
+			</div>
+		
 			<section>
 				<div class="mr-ui-content">
 					
@@ -108,9 +112,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type" >
-								<a target="_blank" href="{{client_url}}">
-									クライアントサイトへ移動する
-								</a>
+								<a target="_blank" href="{{client_url}}">クライアントサイトへ移動する</a>
 							</button>
 						</div>
 					</div>
@@ -134,11 +136,7 @@
 		</div><!--wrap end-->
 
 		<div class="mr-ui-footer">
-			<img src="" width="100%" alt="&copy; xxxxxxxxxxxxxx. All Rights Reserved.">
-		</div>
-		
-		<!-- for conversion -->
-		<div class="mr-ui-conversion">
+			<img src="" width="100%" alt="">
 		</div>
 		
 		<!-- load scripts  -->
@@ -203,7 +201,7 @@
 		<script src="js/mr/ui/Already.js?v=20120620"></script>
 		<script src="js/mr/ui/Page.js?v=201206210840"></script>
 		<script src="js/mr/ui/model/Complete.js?v=20120620"></script>
-		<script src="js/mr/ui/Complete.js?v=20120620"></script>
+		<script src="js/mr/ui/Complete.js?v=201206221647"></script>
 		<script src="js/mr/ui/model/Thankyou.js?v=20120620"></script>
 		<script src="js/mr/ui/Thankyou.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Sorry.js?v=20120620"></script>
