--- a/dapi/public/pc.html
+++ b/dapi/public/pc.html
@@ -89,7 +89,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type">
-								<a target="_blank" href="{{client_url}}">クライアントサイトへ移動する</a>
+								<a target="_blank" href="{{client_url}}">CMのサイトを見る</a>
 							</button>
 						</div>
 					</div>
@@ -104,7 +104,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type">
-								<a target="_blank" href="{{client_url}}">クライアントサイトへ移動する</a>
+								<a target="_blank" href="{{client_url}}">CMのサイトを見る</a>
 							</button>
 						</div>
 					</div>
