--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -97,7 +97,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type">
-								<a target="_blank" href="{{client_url}}">クライアントサイトへ移動する</a>
+								<a target="_blank" href="{{client_url}}">CMのサイトを見る</a>
 							</button>
 						</div>
 					</div>
@@ -112,7 +112,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type" >
-								<a target="_blank" href="{{client_url}}">クライアントサイトへ移動する</a>
+								<a target="_blank" href="{{client_url}}">CMのサイトを見る</a>
 							</button>
 						</div>
 					</div>
@@ -159,7 +159,8 @@
 		
 		<!-- Video.js for mr.ui.VideoPlayer --> 
 		<!-- <script src="js/libs/video-js/video.min.js"></script> -->
-		<script src="js/libs/mediaelement/mediaelement-and-player.min.js"></script>
+		<!-- <script src="js/libs/mediaelement/mediaelement-and-player.min.js"></script> -->
+		<script src="js/libs/mediaelement/mediaelement-and-player.js"></script>
 		
 		<!-- cript lib -->
 		<script src="js/libs/sjcl.js"></script>
@@ -168,16 +169,16 @@
 		<script src="js/libs/URI.js"></script>
 		
 		<!-- MovieReward Scripts -->
-		<script src="js/mr.js?v=201206212305"></script>
+		<script src="js/mr.js?v=201206231457"></script>
 		
 		<script src="js/mr/model/Base.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Base.js?v=20120620"></script>
-		<script src="js/mr/model/v1/Campaign.js?v=20120620"></script>
+		<script src="js/mr/model/v1/Campaign.js?v=201206231517"></script>
 		<script src="js/mr/model/v1/Page.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Question.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Questions.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Answer.js?v=20120620"></script>
-		<script src="js/mr/model/Parameter.js?v=20120620"></script>
+		<script src="js/mr/model/Parameter.js?v=201206231500"></script>
 		<script src="js/mr/model/Campaign.js?v=20120620"></script>
 		<script src="js/mr/model/Page.js?v=20120620"></script>
 		<script src="js/mr/model/Question.js?v=20120620"></script>
@@ -186,7 +187,7 @@
 				
 		<script src="js/mr/ui/Base.js?v=20120620"></script>
 		<script src="js/mr/ui/Creative.js?v=20120620"></script>
-		<script src="js/mr/ui/PlayerME.js?v=201206211108"></script>
+		<script src="js/mr/ui/PlayerME.js?v=201206231718"></script>
 		<script src="js/mr/ui/model/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Ad.js?v=20120620"></script>
@@ -217,8 +218,8 @@
 		<script src="js/mr/ui/Canvas.js?v=20120620"></script>
 
 		
-		<script src="js/mr/controller/Controller.js?v=201206211010"></script>
-		<script src="js/mr/controller/MobileController.js"></script>
+		<script src="js/mr/controller/Controller.js?v=201206231532"></script>
+		<script src="js/mr/controller/MobileController.js?v=201206231532"></script>
 		
 		<script>
 			$(document).ready(function(){
