--- a/dapi/public/js/mr/test/api.answers.test.html
+++ b/dapi/public/js/mr/test/api.answers.test.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8" />
 		<title>ANSWERS API Test - NCI-201205 Test</title>
 		<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.5.0.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" ></script>
+		<script src="http://code.jquery.com/jquery-latest.min.js" ></script>
 		<script src="http://code.jquery.com/qunit/qunit-1.5.0.js"></script>
 		<script>
 			$(function(){
