--- a/dapi/public/js/mr/test/mr.ui.Questions.html
+++ b/dapi/public/js/mr/test/mr.ui.Questions.html
@@ -8,23 +8,18 @@
 		<title>NCI-201205 Test Suite</title>
 		<link rel="stylesheet" href="qunit/qunit.css">
 		
+		<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.5.0.css">
+		<script src="http://code.jquery.com/jquery-latest.min.js" ></script>
+		<script src="http://code.jquery.com/qunit/qunit-1.5.0.js"></script>
 	</head>
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
-		<script src="qunit/qunit.js"></script>
 		
 		<!-- User agent detection -->
 		<script src="../../ua.js"></script>
 		
 		<!-- jQuery, Backbone, underscore -->
-		<script>
-			(function(){
-				(ua.OS === "iPhone/iPod") ?
-					document.write('<script src="../../libs/zepto-1.0-rc1.min.js"><\/script>') :
-			 		document.write('<script src="../../libs/jquery-1.7.2.min.js"><\/script>');
-			})();
-		</script>
 		<script src="../../libs/underscore-1.3.3.js"></script>
 		<script src="../../libs/backbone-0.9.2.js"></script>
 		
@@ -41,9 +36,6 @@
 		<script src="../model/v1/Question.js"></script>
 		<script src="../model/v1/Questions.js"></script>
 		<script src="../model/Parameter.js"></script>
-		<script src="../model/CountDown.js"></script>
-		<script src="../model/Next.js"></script>
-		<script src="../model/Content.js"></script>
 		<script src="../model/Campaign.js"></script>
 		<script src="../model/Page.js"></script>
 		<script src="../model/Question.js"></script>
