--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -9,11 +9,11 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 		<title></title>
 
-		<link rel="stylesheet" href="css/sp/reset.css">
-		<link rel="stylesheet" href="css/sp/base.css">
+		<link rel="stylesheet" href="css/sp/reset.css?v=201206231840">
+		<link rel="stylesheet" href="css/sp/base.css?v=201206231921">
 		<!-- <link rel="stylesheet" href="js/libs/video-js/video-js.min.css" > -->
 		<link rel="stylesheet" href="js/libs/mediaelement/mediaelementplayer.min.css" />
-		<link rel="stylesheet" href="css/sp/style.css?v=201206221657">
+		<link rel="stylesheet" href="css/sp/style.css?v=201206231931">
 		
 	  <script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 	</head>
@@ -26,7 +26,7 @@
 
 		<div class="mr-ui-body">
 			
-			<div class="mr-ui-ad">
+			<div class="mr-ui-ad mr-ui-template">
 				<video class="mr-ui-player" width="265" height="154"></video>
 				<div class="mr-ui-creative mr-ui-template">{{creative}}</div>
 			</div>
@@ -40,7 +40,7 @@
 			</div>
 		
 			<section>
-				<div class="mr-ui-content">
+				<div class="mr-ui-content mr-ui-template">
 					
 					<!-- landing page : template for mr.ui.Landing.js -->
 					<div class="mr-ui-landing mr-ui-content-block mr-ui-template">
@@ -173,7 +173,7 @@
 		
 		<script src="js/mr/model/Base.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Base.js?v=20120620"></script>
-		<script src="js/mr/model/v1/Campaign.js?v=201206231517"></script>
+		<script src="js/mr/model/v1/Campaign.js?v=201206232026"></script>
 		<script src="js/mr/model/v1/Page.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Question.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Questions.js?v=20120620"></script>
@@ -196,7 +196,7 @@
 		<script src="js/mr/ui/Landing.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Next.js?v=20120620"></script>
 		<script src="js/mr/ui/Next.js?v=20120620"></script>
-		<script src="js/mr/ui/Question.js?v=201206210830"></script>
+		<script src="js/mr/ui/Question.js?v=201206231823"></script>
 		<script src="js/mr/ui/Questions.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Already.js?v=20120621"></script>
 		<script src="js/mr/ui/Already.js?v=20120620"></script>
