--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -9,11 +9,11 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 		<title></title>
 
-		<link rel="stylesheet" href="css/sp/reset.css?v=201206231840">
+		<link rel="stylesheet" href="css/sp/reset.css?v=201206240128">
 		<link rel="stylesheet" href="css/sp/base.css?v=201206231921">
 		<!-- <link rel="stylesheet" href="js/libs/video-js/video-js.min.css" > -->
 		<link rel="stylesheet" href="js/libs/mediaelement/mediaelementplayer.min.css" />
-		<link rel="stylesheet" href="css/sp/style.css?v=201206232307">
+		<link rel="stylesheet" href="css/sp/style.css?v=201206240133">
 		
 	  <script src="js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 	</head>
@@ -70,7 +70,7 @@
 								</div>
 							</div>
 						</div>
-						<button type="button" class="mr-ui-next mr-ui-button clear-type">
+						<button class="mr-ui-next mr-ui-button clear-type">
 							
 						</button>
 					</div>
