--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -34,11 +34,7 @@
 			<div class="mr-ui-nav mr-ui-template">
 				<p class="clear-type">{{html}}</p>
 			</div>
-
-			<!-- for conversion -->
-			<div class="mr-ui-conversion mr-ui-template">
-			</div>
-		
+			
 			<section>
 				<div class="mr-ui-content mr-ui-template">
 					
@@ -135,10 +131,16 @@
 
 		</div><!--wrap end-->
 
+		<!-- for conversion -->
+		<div class="mr-ui-conversion mr-ui-template">
+		</div>
+		
 		<div class="mr-ui-footer">
 			<img src="" width="100%" alt="">
 		</div>
 		
+		
+			
 		<!-- load scripts  -->
 		<!-- User agent detection -->
 		<script src="js/ua.js"></script>
@@ -159,8 +161,8 @@
 		
 		<!-- Video.js for mr.ui.VideoPlayer --> 
 		<!-- <script src="js/libs/video-js/video.min.js"></script> -->
-		<!-- <script src="js/libs/mediaelement/mediaelement-and-player.min.js"></script> -->
-		<script src="js/libs/mediaelement/mediaelement-and-player.js"></script>
+		<script src="js/libs/mediaelement/mediaelement-and-player.min.js"></script>
+		<!-- <script src="js/libs/mediaelement/mediaelement-and-player.js"></script> -->
 		
 		<!-- cript lib -->
 		<script src="js/libs/sjcl.js"></script>
@@ -169,11 +171,11 @@
 		<script src="js/libs/URI.js"></script>
 		
 		<!-- MovieReward Scripts -->
-		<script src="js/mr.js?v=201206231457"></script>
+		<script src="js/mr.js?v=201206240416"></script>
 		
 		<script src="js/mr/model/Base.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Base.js?v=20120620"></script>
-		<script src="js/mr/model/v1/Campaign.js?v=201206232352"></script>
+		<script src="js/mr/model/v1/Campaign.js?v=201206240350"></script>
 		<script src="js/mr/model/v1/Page.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Question.js?v=20120620"></script>
 		<script src="js/mr/model/v1/Questions.js?v=20120620"></script>
@@ -187,7 +189,7 @@
 				
 		<script src="js/mr/ui/Base.js?v=20120620"></script>
 		<script src="js/mr/ui/Creative.js?v=20120620"></script>
-		<script src="js/mr/ui/PlayerME.js?v=201206232349"></script>
+		<script src="js/mr/ui/PlayerME.js?v=201206240200"></script>
 		<script src="js/mr/ui/model/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/Nav.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Ad.js?v=20120620"></script>
@@ -202,7 +204,7 @@
 		<script src="js/mr/ui/Already.js?v=20120620"></script>
 		<script src="js/mr/ui/Page.js?v=201206210840"></script>
 		<script src="js/mr/ui/model/Complete.js?v=20120620"></script>
-		<script src="js/mr/ui/Complete.js?v=201206221647"></script>
+		<script src="js/mr/ui/Complete.js?v=201206240350"></script>
 		<script src="js/mr/ui/model/Thankyou.js?v=20120620"></script>
 		<script src="js/mr/ui/Thankyou.js?v=20120620"></script>
 		<script src="js/mr/ui/model/Sorry.js?v=20120620"></script>
@@ -218,7 +220,7 @@
 		<script src="js/mr/ui/Canvas.js?v=20120620"></script>
 
 		
-		<script src="js/mr/controller/Controller.js?v=201206231532"></script>
+		<script src="js/mr/controller/Controller.js?v=201206240340"></script>
 		<script src="js/mr/controller/MobileController.js?v=201206231532"></script>
 		
 		<script>
