--- a/dapi/public/js/libs/mediaelement/mr-player.html
+++ b/dapi/public/js/libs/mediaelement/mr-player.html
@@ -18,7 +18,7 @@
 			params.bgcolor = "#000000";
 			params.play = "true";
 			params.loop = "true";
-			params.wmode = "gpu";
+			params.wmode = "direct";
 			params.scale = "showall";
 			params.menu = "true";
 			params.devicefont = "false";
