--- a/dapi/public/sp.html
+++ b/dapi/public/sp.html
@@ -100,7 +100,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type">
-								<a target="_blank" href="{{client_url}}">CMのサイトを見る</a>
+								<a target="_blank" href="{{client_url}}">{{button_title}}</a>
 							</button>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 						</div>
 						<div class="mr-ui-client">
 							<button type="button" class="mr-ui-next mr-ui-button clear-type" >
-								<a target="_blank" href="{{client_url}}">CMのサイトを見る</a>
+								<a target="_blank" href="{{client_url}}">{{button_title}}</a>
 							</button>
 						</div>
 					</div>
@@ -195,74 +195,74 @@
 		<script src="js/libs/URI.js"></script>
 		
 		<!-- MovieReward Scripts -->
-		<script src="js/mr.js?v=201206291940"></script>
+		<script src="js/mr.js?v=201206292315"></script>
 		
-		<script src="js/mr/model/Base.js?v=201206291940"></script>
-		<script src="js/mr/model/v1/Base.js?v=201206291940"></script>
-		<script src="js/mr/model/v1/Campaign.js?v=201206291940"></script>
-		<script src="js/mr/model/v1/Page.js?v=201206291940"></script>
-		<script src="js/mr/model/v1/Question.js?v=201206291940"></script>
-		<script src="js/mr/model/v1/Questions.js?v=201206291940"></script>
-		<script src="js/mr/model/v1/Answer.js?v=201206291940"></script>
-		<script src="js/mr/model/Parameter.js?v=201206291940"></script>
-		<script src="js/mr/model/Campaign.js?v=201206291940"></script>
-		<script src="js/mr/model/Page.js?v=201206291940"></script>
-		<script src="js/mr/model/Question.js?v=201206291940"></script>
-		<script src="js/mr/model/Questions.js?v=201206291940"></script>
-		<script src="js/mr/model/Answer.js?v=201206291940"></script>
+		<script src="js/mr/model/Base.js?v=201206292315"></script>
+		<script src="js/mr/model/v1/Base.js?v=201206292315"></script>
+		<script src="js/mr/model/v1/Campaign.js?v=201206292315"></script>
+		<script src="js/mr/model/v1/Page.js?v=201206292315"></script>
+		<script src="js/mr/model/v1/Question.js?v=201206292315"></script>
+		<script src="js/mr/model/v1/Questions.js?v=201206292315"></script>
+		<script src="js/mr/model/v1/Answer.js?v=201206292315"></script>
+		<script src="js/mr/model/Parameter.js?v=201206292315"></script>
+		<script src="js/mr/model/Campaign.js?v=201206292315"></script>
+		<script src="js/mr/model/Page.js?v=201206292315"></script>
+		<script src="js/mr/model/Question.js?v=201206292315"></script>
+		<script src="js/mr/model/Questions.js?v=201206292315"></script>
+		<script src="js/mr/model/Answer.js?v=201206292315"></script>
 				
-		<script src="js/mr/ui/Base.js?v=201206291940"></script>
-		<script src="js/mr/ui/Creative.js?v=201206291940"></script>
-		<script src="js/mr/ui/PlayerPC.js?v=201206291940"></script>
-		<script src="js/mr/ui/PlayerME.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Nav.js?v=201206291940"></script>
-		<script src="js/mr/ui/Nav.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Link.js?v=201206291940"></script>
-		<script src="js/mr/ui/Link.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Ad.js?v=201206291940"></script>
-		<script src="js/mr/ui/Ad.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Landing.js?v=201206291940"></script>
-		<script src="js/mr/ui/Landing.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Next.js?v=201206291940"></script>
-		<script src="js/mr/ui/Next.js?v=201206291940"></script>
-		<script src="js/mr/ui/Question.js?v=201206291940"></script>
-		<script src="js/mr/ui/Questions.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Already.js?v=201206291940"></script>
-		<script src="js/mr/ui/Already.js?v=201206291940"></script>
-		<script src="js/mr/ui/Page.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Complete.js?v=201206291940"></script>
-		<script src="js/mr/ui/Complete.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Thankyou.js?v=201206291940"></script>
-		<script src="js/mr/ui/Thankyou.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Sorry.js?v=201206291940"></script>
-		<script src="js/mr/ui/Sorry.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Timeout.js?v=201206291940"></script>
-		<script src="js/mr/ui/Timeout.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Content.js?v=201206291940"></script>
-		<script src="js/mr/ui/Content.js?v=201206291940"></script>
-		<script src="js/mr/ui/Body.js?v=201206291940"></script>
-		<script src="js/mr/ui/Footer.js?v=201206291940"></script>
-		<script src="js/mr/ui/Header.js?v=201206291940"></script>
-		<script src="js/mr/ui/model/Theme.js?v=201206291940"></script>
-		<script src="js/mr/ui/Theme.js?v=201206291940"></script>
-		<script src="js/mr/ui/Conversion.js?v=201206291940"></script>
-		<script src="js/mr/ui/Canvas.js?v=201206291940"></script>
+		<script src="js/mr/ui/Base.js?v=201206292315"></script>
+		<script src="js/mr/ui/Creative.js?v=201206292315"></script>
+		<script src="js/mr/ui/PlayerPC.js?v=201206292315"></script>
+		<script src="js/mr/ui/PlayerME.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Nav.js?v=201206292315"></script>
+		<script src="js/mr/ui/Nav.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Link.js?v=201206292315"></script>
+		<script src="js/mr/ui/Link.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Ad.js?v=201206292315"></script>
+		<script src="js/mr/ui/Ad.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Landing.js?v=201206292315"></script>
+		<script src="js/mr/ui/Landing.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Next.js?v=201206292315"></script>
+		<script src="js/mr/ui/Next.js?v=201206292315"></script>
+		<script src="js/mr/ui/Question.js?v=201206292315"></script>
+		<script src="js/mr/ui/Questions.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Already.js?v=201206292315"></script>
+		<script src="js/mr/ui/Already.js?v=201206292315"></script>
+		<script src="js/mr/ui/Page.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Complete.js?v=201206292315"></script>
+		<script src="js/mr/ui/Complete.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Thankyou.js?v=201206292315"></script>
+		<script src="js/mr/ui/Thankyou.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Sorry.js?v=201206292315"></script>
+		<script src="js/mr/ui/Sorry.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Timeout.js?v=201206292315"></script>
+		<script src="js/mr/ui/Timeout.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Content.js?v=201206292315"></script>
+		<script src="js/mr/ui/Content.js?v=201206292315"></script>
+		<script src="js/mr/ui/Body.js?v=201206292315"></script>
+		<script src="js/mr/ui/Footer.js?v=201206292315"></script>
+		<script src="js/mr/ui/Header.js?v=201206292315"></script>
+		<script src="js/mr/ui/model/Theme.js?v=201206292315"></script>
+		<script src="js/mr/ui/Theme.js?v=201206292315"></script>
+		<script src="js/mr/ui/Conversion.js?v=201206292315"></script>
+		<script src="js/mr/ui/Canvas.js?v=201206292315"></script>
 
 		
-		<script src="js/mr/controller/Controller.js?v=201206291940"></script>
-		<script src="js/mr/controller/MobileController.js?v=201206291940"></script>
+		<script src="js/mr/controller/Controller.js?v=201206292315"></script>
+		<script src="js/mr/controller/MobileController.js?v=201206292315"></script>
 		
 		<script>
 			$(document).ready(function(){
-    		mr.initialize({
-    			// api: '../api/v1',                                         // relative
+				mr.initialize({
+					// api: '../api/v1',                                         // relative
 					// api: 'http://192.168.1.115/nci-201205/api/v1',            // dev(tsuru local)
 					// api: 'http://demo.sunbi.co.jp/nci-201205/trunk/api/v1',   // dev(sunbi)
 					// api: 'http://moviereward.nadai.jp:3000/api/v1',           // prod
 					// api: 'http://moviereward.nadai.jp:3001/api/v1',           // dev
 					api: 'http://moviereward.nadai.jp:3002/api/v1',           // prod
-    			el:       'mr-canvas',
-    			terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
+					el:       'mr-canvas',
+					terminal: (ua.OS === "iPhone/iPod") ? 'iPhone' : 'Android'
 				});
   		});
 		</script>
